--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -9,12 +9,13 @@ AM_CFLAGS =\
 lib_LTLIBRARIES = libcdescent.la
 
 libcdescent_la_SOURCES =\
+	linreg.c\
 	utils.c\
 	cdescent.c
 
 libcdescent_la_CPPFLAGS = -I$(top_srcdir)/include
 
-libcdescent_la_LDFLAGS = -L$(top_srcdir)/src/linreg
+libcdescent_la_LDFLAGS = -L$(top_srcdir)/src
 
-libcdescent_la_LIBADD = -llinreg
+libcdescent_la_LIBADD =
 
