--- a/pkgconfig/cdescent.pc.in
+++ b/pkgconfig/cdescent.pc.in
@@ -6,5 +6,5 @@ includedir=@includedir@
 Name: @PACKAGE@
 Description: @CDESCENT_DESCRIPTION@
 Version: @VERSION@
-Libs: -L${libdir} -lcdescent -llinreg
+Libs: -L${libdir} -lcdescent
 Cflags: -I${includedir}/@PACKAGE@
