--- a/include/Makefile.am
+++ b/include/Makefile.am
@@ -4,7 +4,7 @@ libcdescent_includedir = $(pkgincludedir)
 
 libcdescent_include_DATA =\
 	mmio.h\
-	mm_mtx.h\
+	mmreal.h\
 	linreg.h\
 	cdescent.h
 
