140627-iss001: replace linreg -> linregmodel

--- a/include/Makefile.am
+++ b/include/Makefile.am
@@ -5,7 +5,7 @@ libcdescent_includedir = $(pkgincludedir)
 libcdescent_include_DATA =\
 	mmio.h\
 	mmreal.h\
-	linreg.h\
+	linregmodel.h\
 	cdescent.h
 
 EXTRA_DIST = $(libcdescent_include_DATA)
