--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -22,5 +22,5 @@ libcdescent_la_CPPFLAGS = -fopenmp -I$(top_srcdir)/include
 
 libcdescent_la_LDFLAGS = -L$(top_srcdir)/src
 
-libcdescent_la_LIBADD = -lgomp
+libcdescent_la_LIBADD = -llapack -lgomp
 
