140703-iss001:fix bug of configure.ac

--- a/configure.ac
+++ b/configure.ac
@@ -37,7 +37,7 @@ fi
 AC_ARG_WITH(
 	[blas-dir],
 	AC_HELP_STRING([--with-blas-dir=DIR],[BLAS library directory]),
-	[with_blas_libdir="$withval"],
+	[with_blas_dir="$withval"],
 	[with_blas=""]
 )
 if test "$with_blas_dir"; then
@@ -47,7 +47,7 @@ fi
 AC_ARG_WITH(
 	[lapack-dir],
 	AC_HELP_STRING([--with-lapack-dir=DIR],[LAPACK library directory]),
-	[with_lapack_libdir="$withval"],
+	[with_lapack_dir="$withval"],
 	[with_lapack=""]
 )
 if test "$with_lapack_dir"; then
@@ -57,14 +57,13 @@ fi
 AC_CHECK_LIB([blas],[dcopy_],[])
 AC_CHECK_LIB([lapack],[dlamch_],[])
 
-use_omp="yes"
 AC_ARG_ENABLE(
 	[openmp],
 	AC_HELP_STRING([--enable-openmp],[enable openMP [[default=yes]]]),
-	[use_omp="yes"],
-	[use_omp="no"]
+	[],
+	[enable_omp="yes"]
 )
-if test "x$use_omp"="xyes"; then
+if test "x$enable_omp"="xyes"; then
 	CFLAGS="$CFLAGS -fopenmp"
 fi
 
@@ -73,7 +72,6 @@ AC_CHECK_HEADER([stdlib.h])
 AC_CHECK_HEADER([string.h])
 AC_CHECK_HEADER([lapack.h])
 AC_CHECK_HEADER([blas.h])
-#AC_CHECK_HEADER([qrupdate.h])
 
 # Checks for typedefs, structures, and compiler characteristics.
 AC_HEADER_STDBOOL
@@ -84,6 +82,7 @@ AC_FUNC_MALLOC
 AC_FUNC_REALLOC
 AC_CHECK_FUNCS([floor pow sqrt log strrchr])
 AC_CHECK_FUNCS([dcopy_])
+AC_CHECK_FUNCS([dlamch_])
 
 # pkgconfig
 CDESCENT_DESCRIPTION='C implementation of coordinate descent algorithm'
