140731-iss001: add mkl support to configure.ac

--- a/configure.ac
+++ b/configure.ac
@@ -32,7 +32,7 @@ AC_ARG_WITH(
 	[with_atlas_libdir=""])
 if test "$with_atlas_libdir"; then
 	LDFLAGS="$LDFLAGS -L$with_atlas_libdir"
-	with_atlas=yes
+	use_atlas=yes
 fi
 
 AC_ARG_WITH(
@@ -43,7 +43,29 @@ AC_ARG_WITH(
 	[with_atlas_incdir=""])
 if test "$with_atlas_incdir"; then
 	CPPFLAGS="$CPPFLAGS -L$with_atlas_incdir"
-	with_atlas=yes
+	use_atlas=yes
+fi
+
+AC_ARG_WITH(
+	[mkl-libdir],
+	[AC_HELP_STRING([--with-mkl-libdir=DIR],
+	[Intel math kernel library directory])],
+	[with_mkl_libdir="$withval"],
+	[with_mkl_libdir=""])
+if test "$with_mkl_libdir"; then
+	LDFLAGS="$LDFLAGS -L$with_mkl_libdir"
+	use_mkl=yes
+fi
+
+AC_ARG_WITH(
+	[mkl-incdir],
+	[AC_HELP_STRING([--with-mkl-incdir=DIR],
+	[Intel math kernel library include directory])],
+	[with_mkl_incdir="$withval"],
+	[with_mkl_incdir=""])
+if test "$with_mkl_incdir"; then
+	CPPFLAGS="$CPPFLAGS -L$with_mkl_incdir"
+	use_mkl=yes
 fi
 
 AC_ARG_WITH(
@@ -66,8 +88,14 @@ if test "$with_blas_incdir"; then
 	CPPFLAGS="$CPPFLAGS -L$with_blas_incdir"
 fi
 
-if test "x$with_atlas" == xyes; then
+if test "x$use_atlas" == xyes; then
 	AC_CHECK_LIB([f77blas],[main],[])
+elif test "x$use_mkl" == xyes; then
+	AC_CHECK_LIB([mkl_intel_lp64],
+	[main],
+	[LIBS="-lmkl_intel_lp64 -lmkl_intel_thread -lmkl_core -liomp5 -lpthread -lm $LIBS"],
+	[AC_MSG_ERROR([Cannot find Intel Math Kernel Library])],
+	[-lmkl_intel_lp64 -lmkl_intel_thread -lmkl_core -liomp5 -lpthread -lm])
 else
 	AC_CHECK_LIB([blas],[main],[])
 fi
@@ -125,3 +153,4 @@ AC_CONFIG_FILES([Makefile
                  src/Makefile
                  example/Makefile])
 AC_OUTPUT
+
