140919-iss001: change lt version

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,7 +1,5 @@
 ## Process this file with automake to produce Makefile.in
 
-AM_CPPFLAGS = -I$(top_srcdir)/include
-
 AM_CFLAGS =\
 	 -Wall\
 	 -g
@@ -19,9 +17,8 @@ libcdescent_la_SOURCES =\
 	update.c\
 	bic.c
 
+libcdescent_la_LIBADD = -L$(top_srcdir)/src
 libcdescent_la_CPPFLAGS = -I$(top_srcdir)/include
+libcdescent_la_LDFLAGS = -version-info $(CDESCENT_LT_VERSION)
 
-libcdescent_la_LDFLAGS = -L$(top_srcdir)/src
-
-libcdescent_la_LIBADD =
 
