141114-iss001: add omp support to mm_real

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -8,7 +8,7 @@ lib_LTLIBRARIES = libcdescent.la
 
 libcdescent_la_SOURCES =\
 	private/private.c\
-	atomic.c\
+	private/atomic.c\
 	mmio.c\
 	mmreal.c\
 	linregmodel.c\
