150227-iss001: modify configure.ac for automake 1.14

--- a/configure.ac
+++ b/configure.ac
@@ -12,8 +12,9 @@ CDESCENT_AGE=5
 CDESCENT_LT_VERSION="${CDESCENT_CURRENT}:${CDESCENT_REVISION}:${CDESCENT_AGE}"
 AC_SUBST(CDESCENT_LT_VERSION)
 
-AM_INIT_AUTOMAKE
+AM_INIT_AUTOMAKE([subdir-objects -Wall])
 
+AM_PROG_AR([ACT-IF-FAIL])
 # Checks for programs.
 AC_PROG_CC
 AM_PROG_CC_C_O
