150301-iss001: modify configure.ac

--- a/configure.ac
+++ b/configure.ac
@@ -12,7 +12,7 @@ CDESCENT_AGE=5
 CDESCENT_LT_VERSION="${CDESCENT_CURRENT}:${CDESCENT_REVISION}:${CDESCENT_AGE}"
 AC_SUBST(CDESCENT_LT_VERSION)
 
-AM_INIT_AUTOMAKE([subdir-objects -Wall])
+AM_INIT_AUTOMAKE([foreign subdir-objects -Wall])
 
 AM_PROG_AR([ACT-IF-FAIL])
 # Checks for programs.
