150723-iss001: implement stochastic CD

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -15,6 +15,9 @@ libcdescent_la_SOURCES =\
 	cdescent.c\
 	stepsize.c\
 	bic.c\
+	update.c\
+	cyclic.c\
+	stochastic.c\
 	regression.c
 
 libcdescent_la_LIBADD = -L$(top_srcdir)/src
